LFA/Projeto/geometrics-lfa-07-master/examples/geometrics_tests/semantic_errors/semantic_error_rectangle.geom
geometrics: main

/* Should fail -> mismatched input '(' expecting {'color', 'thickness', 'filled', 'hidden', NEWLINE} */
rectangle r4 p3 5/x 3(3 